fixed animation errors on mobile

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -51,7 +51,7 @@ html.lenis {height: auto; scroll-behavior: auto;}
 
 ::-webkit-scrollbar {width: 0;}
 ::-webkit-scrollbar-thumb {background-color: var(--md-sys-color-secondary); border-radius: 10px;}
-::selection {background: var(--md-sys-color-primary); color: var(--md-sys-color-on-primary)}
+// ::selection {background: var(--md-sys-color-primary); color: var(--md-sys-color-on-primary)}
 
 .column-text-outer {overflow: hidden}
 // .card {border-radius: 36px;}
